--- a/marvel.html
+++ b/marvel.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>them ne</h1>
+    <h2> another heading </h2>
      <div id="root">
          <div class="character">
              <img src="" alt="">
