--- a/marvel.html
+++ b/marvel.html
@@ -8,7 +8,7 @@
 <body>
     <h1>them ne</h1>
     <h2> another heading </h2>
-    <h2>last heading ne</h2>
+    <h2> not the last heading ne</h2>
      <div id="root">
          <div class="character">
              <img src="" alt="">
